apps/authentik/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik
  namespace: apps
  labels:
    app.kubernetes.io/name: authentik
    app.kubernetes.io/component: application
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: authentik
    app.kubernetes.io/component: application
  ports:
    - name: http
      port: 9000
      targetPort: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: authentik-postgresql
  namespace: apps
  labels:
    app.kubernetes.io/name: authentik
    app.kubernetes.io/component: database
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: authentik
    app.kubernetes.io/component: database
  ports:
    - name: postgresql
      port: 5432
      targetPort: postgresql
      protocol: TCP
