apps/authentik/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: apps
spec:
  parentRefs:
    - name: home
      namespace: traefik
  hostnames:
    - auth.reza.network
  rules:
    - backendRefs:
        - name: authentik
          port: 9000
